AB#903 Refactor authorizationGroup permission checks